# CommonCmake

./: CMakeLists.txt  ReadMe.md
client/: client.cpp
ntp_client/: VxNtpHelper.cpp  VxNtpHelper.h
protectServer/: protectServer.cpp
server/: server.cpp
